[package]
name = "serialitm"
version = "0.2.1"
authors = ["David Haig <david@ninjametal.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ninjasource/serialitm.git"
description = "A rust command line tool used to read ITM packets off the serial port"
keywords = ["itm", "serialport", "serial", "comport"]
categories = ["embedded", "no-std"]
readme = "README.md"

[dependencies]
clap = "2.33"
itm = "0.3"
chrono = "0.4"
mio-serial = "3.3.1"
mio = "^0.6.0"

[target.'cfg(unix)'.dependencies]
nix = "^0.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["commapi", "handleapi", "winbase"] }
mio-named-pipes = "0.1.5"
